# VeloSim

./: .gitignore  CMakeLists.txt  README.md
VeloSim/: CMakeLists.txt  VeloSim.cpp  VeloSim.h
VeloSim/services/: ftms.cpp  ftms.hpp  heartrate.cpp  heartrate.hpp
VeloSim/utils/: utils.cpp  utils.hpp  uuids.hpp
